--- a/perldoc/ko/perl/5.10/perlfunc.pod
+++ b/perldoc/ko/perl/5.10/perlfunc.pod
@@ -14340,15 +14340,14 @@ C<sysopen> C<0666> would create a file with mode C<0640> (C<0666 &~
 Unix 퍼미션 C<rwxr-x---> 는 3비트의 3개의 쌍, 또는 세자리의 8진수로
 표현됩니다:
 C<0750> (맨앞의 0는 8진수를 의미하고, 실제의 값은 아닙니다).
-
-C<umask> の値は無効にするパーミッションビットのこのような数値表現です。
-C<mkdir> や C<sysopen> で渡されたパーミッション(または「モード」)の値は
-umask で修正され、たとえ C<sysopen> で C<0777> のパーミッションで
-ファイルを作るように指定しても、umask が C<0022> なら、
-結果としてファイルは C<0755> のパーミッションで作成されます。
-C<umask> が C<0027> (グループは書き込めない; その他は読み込み、書き込み、
-実行できない) のとき、C<sysopen> に C<0666> を渡すと、
-ファイルはモード C<0640> (C<0666 &~ 027> は C<0640>)で作成されます。
+C<umask> 의 값은 무효로 하는 퍼미션비트의 이런 수치표현입니다.
+C<mkdir> 이나 C<sysopen> 으로 건네진 퍼미션(또는 "모드") 의 값은 
+umask 로 수정되어, 예를들어 C<sysopen> 에서 C<0777> 의 퍼미션에서 
+파일을 만들도록 지정해도 umask 가 C<0022> 라면, 
+결과로 파일은 C<0755> 의 퍼미션에서 작성됩니다.
+C<umask> 가 C<0027> (그룹은 쓸 수 없습니다; 그외는 읽기, 쓰기, 
+실행 할 수 없습니다) 일 때, C<sysopen> 에 C<0666> 을 넘기면 
+파일모드 C<0640> (C<0666 &~ 027> 은 C<0640>) 으로 작성됩니다.
 
 =begin original
 
@@ -14364,14 +14363,14 @@ so on.
 
 =end original
 
-以下は助言です: 作成モードとして、(C<sysopen> による)通常ファイルでは
-C<0666> を、(C<mkdir> による)ディレクトリでは C<0777> を指定しましょう。
-これにより、ユーザーに選択の自由を与えます: もしファイルを守りたいなら、
-プロセスの umask として C<022>, C<027>, あるいは特に非社交的な
-C<077> を選択できます。
-プログラムがユーザーより適切なポリシー選択ができることは稀です。
-例外は、プライベートに保つべきファイル(メール、ウェブブラウザのクッキー、
-I<.rhosts> ファイルなど)を書く場合です。
+여기에 조언이 있습니다: 작성모드로 (C<sysopen> 에 의한) 통상 파일에서는
+C<0666> 을 (C<mkdir> 에 의한) 디렉토리 에서는 C<0777> 를 지정합시다.
+이에 의해 유저에게 선택의 자유를 줍니다: 만약 파일을 지키고 싶다면, 
+프로세스의 umask 로 C<022>, C<027>, 또는 특히 비사교적인 C<077> 을 
+선택할 수 있습니다.
+프로그램이 유저보다 적절한 정책 선택이 가능하다는 것은 희망사항입니다.
+예외는 프라이베이트로 가져야할 파일(메일, 웹브라우저 쿠키, I<.rhosts>
+파일등)을 쓰는 경우입니다.
 
 =begin original
 
@@ -14382,11 +14381,11 @@ not trying to restrict access for yourself, returns C<undef>.
 
 =end original
 
-umask(2) が実装されていないシステムで、I<自分自身> へのアクセスを
-制限しようとした(つまり (EXPR & 0700) > 0)場合、実行時に致命的エラーが
-発生します。
-umask(2) が実装されていないシステムで、自分自身へのアクセスは
-制限しようとしなかった場合、C<undef> を返します。
+umask(2) 가 실행되지 않는 시스템에서 I<자기자신> 으로 접근을 
+제한하도록 한 (즉 (EXPR && 0700) > 0) 경우, 싱행시에 치명적인 에러가 
+발생합니다.
+umask(2) 가 구성되지 않은 시스템에서 자기자신으로의 접근은 
+제한하도록 하지 않은 경우, C<undef> 를 반환합니다.
 
 =begin original
 
@@ -14395,9 +14394,9 @@ string of octal digits.  See also L</oct>, if all you have is a string.
 
 =end original
 
-umask は通常 8 進数で与えられる数値であることを忘れないでください。
-8 進数の文字列 I<ではありません>。
-文字列しかない場合、 L</oct> も参照して下さい。
+umask 는 통상 8진수로 주어진 수치인 것을 잊지 말아주세요.
+8진수의 문자열 I<이 아닙니다>.
+문자열밖에 없는 경우, L</oct> 도 참조해주세요.
 
 =item undef EXPR
 X<undef> X<undefine>
@@ -14418,17 +14417,17 @@ parameter.  Examples:
 
 =end original
 
-左辺値である EXPR の値を未定義にします。
-スカラ値、(C<@> を使った)配列、(C<%> を使った)ハッシュ、(C<&> を使った) 
-サブルーチン、(C<*> を使った)型グロブだけに使用します。
-(特殊変数や DBM リスト値に C<undef $hash{$key}> などとしても
-おそらく期待通りの結果にはなりませんから、しないでください。
-L</delete> を参照してください。)
-常に未定義値を返します。
-EXPR は省略することができ、その場合には何も未定義にされませんが
-未定義値は返されますので、それをたとえば、
-サブルーチンの返り値、変数への割り当て、引数などとして使うことができます。
-例:
+좌변치인 EXPR 의 값을 미정의로 합니다.
+스칼라값, (C<@> 를 사용한) 배열, (C<%> 를 사용한) 해쉬, (C<&> 를 사용한)
+서브루틴, (C<*> 를 사용한) 형태 glob에게만 사용합니다.
+(특수변수나 DBM 리스트 값에 C<undef $hash{$key}> 같은 것을 해도 
+아마도 기대한 결과가 되지 않기때문에, 하지 말아주세요.
+L</delete> 를 참조해주세요.)
+항상 미정의값을 반환합니다.
+EXPR 은 생략한 것이 되고, 그 경우에는 아무것도 미정의 되지 않지만, 
+미정의값은 반환되기 때문에, 그것을 예를들어, 서브루틴의 반환값 
+변수로의 할당, 인수등으로 사용할 수 있습니다.
+예제:
 
     undef $foo;
     undef $bar{'blurfl'};      # Compare to: delete $bar{'blurfl'};
@@ -14446,7 +14445,7 @@ Note that this is a unary operator, not a list operator.
 
 =end original
 
-これはリスト演算子ではなく、単項演算子であることに注意してください。
+이것은 리스트 연산자가 아닌 단항연산자인 것에 주의해주세요.
 
 =item unlink LIST
 X<unlink> X<delete> X<remove> X<rm> X<del>
@@ -14460,8 +14459,8 @@ deleted.
 
 =end original
 
-LIST に含まれるファイルを削除します。
-削除に成功したファイルの数を返します。
+LIST 에 포함된 파일을 삭제합니다.
+삭제에 성공한 파일의 수를 반환합니다.
 
     $cnt = unlink 'a', 'b', 'c';
     unlink @goners;
@@ -14477,13 +14476,13 @@ many operating systems.  Use C<rmdir> instead.
 
 =end original
 
-注: スーパーユーザ権限で、Perl に -U を付けて実行した場合でなければ、
-C<unlink> はディレクトリを削除しようとすることはありません。
-この条件にあう場合にも、ディレクトリの削除は、
-ファイルシステムに多大な損害を与える可能性があります。
-最後に、C<unlink> をディレクトリに使うのはほとんどの OS では
-対応していません。
-代わりに C<rmdir> を使ってください。
+주: 수퍼유저 권한으로 Perl 에 -U 를 붙여서 실행한 경우가 아니라면, 
+C<unlink> 는 디렉토리를 삭제하려고 하는 것은 아닙니다.
+이 조건에 맞는 경우에도 디렉토리의 삭제는 파일 시스템에 
+크고 많은 손해해를 줄 가능성이 있습니다.
+마지막에 C<unlink> 를 디렉토리에 사용하는 것은 대부분의 OS에서는 
+지원하지 않습니다.
+대신에 C<rmdir> 을 사용해주세요.
 
 =begin original
 
@@ -14491,7 +14490,7 @@ If LIST is omitted, uses C<$_>.
 
 =end original
 
-LIST が省略されると、C<$_> を使います。
+LIST 가 생략되면 C<$_> 를 사용합니다.
 
 =item unpack TEMPLATE,EXPR
 X<unpack>
@@ -14506,9 +14505,9 @@ and expands it out into a list of values.
 
 =end original
 
-C<unpack> は C<pack> の逆を行ないます: 構造体を表わす文字列をとり、
-リスト値に展開し、その配列値を返します。
-(スカラコンテキストでは、単に最初の値を返します。)
+C<unpack> 은 C<pack> 의 반대를 수행합니다: 구조체를 표현하는 문자열을 
+얻고, 리스트 값을 전개해 그 배열값을 반환합니다.
+(스칼라 컨텍스트에서는 단순히 최초의 값을 반환합니다)
 
 =begin original
 
@@ -14516,7 +14515,7 @@ If EXPR is omitted, unpacks the C<$_> string.
 
 =end original
 
-EXPR が省略されると、C<$_> の文字列を unpack します。
+EXPr 이 생략되면 C<$_> 의 문열을 unpack 합니다.
 
 =begin original
 
@@ -14527,10 +14526,10 @@ kind.
 
 =end original
 
-文字列は TEMPLATE で示された固まりに分割されます。
-それぞれの固まりは別々に値に変換されます。
-典型的には、文字列は C<pack> の結果あるいはある種の C の構造体の
-文字列表現の文字列です。
+문자열은 TEMPLATE 로 표현한 덩어리로 분할됩니다.
+각각의 덩어리는 별개의 값으로 변환됩니다.
+전형적으로는 문자열은 C<pack> 의 결과 혹은 어떤 종류의 C 의 구조체의 
+문자열 표현의 문자열입니다.
 
 =begin original
 
@@ -14539,8 +14538,8 @@ Here's a subroutine that does substring:
 
 =end original
 
-TEMPLATE は、C<pack> 関数と同じフォーマットを使います。
-部分文字列を取り出すうサブルーチンの例を示します:
+TEMPLATE 는 C<pack> 함수와 같은 포맷을 사용합니다.
+부분 문자열을 뽑아내는 서브루틴의 예제가 있습니다.
 
     sub substr {
 	my($what,$where,$howmuch) = @_;
@@ -14553,7 +14552,7 @@ and then there's
 
 =end original
 
-これもそうです。
+이것도 그렇습니다.
 
     sub ordinal { unpack("W",$_[0]); } # same as ord()
 
@@ -14568,14 +14567,14 @@ C<ord($char)> is taken, for bit fields the sum of zeroes and ones).
 
 =end original
 
-pack() で利用可能なフィールドの他に、
-フィールドの前に %<数値> というものを付けて、
-項目自身の代わりに、その項目の <数値>-ビットのチェックサムを
-計算させることができます。
-デフォルトは、16-ビットチェックサムです。
-チェックサムは展開された値の数値としての値の合計
-(文字列フィールドの場合は C<ord($char)> の合計、
-ビットフィールドの場合は 0 と 1 の合計) が用いられます。
+pack() 으로 이용가능한 필드 이외에 
+필드의 앞에 %<수치> 라는 것을 붙이면, 
+항목 자신을 대신해 그 항목의 <수치> 비트 체크섬을 
+계산시키는 것이 가능합니다.
+기본값은 16-비트 체크섬입니다.
+체크섬은 전개된 값의 수치로 값의 합계
+(문자열 필드의 경우는 C<ord($char)> 의 합계, 
+비트 필드의 경우는 0 과 1 의 합계) 가 사용됩니다.
 
 =begin original
 
@@ -14584,8 +14583,8 @@ computes the same number as the System V sum program:
 
 =end original
 
-たとえば、以下のコードは
-System V の sum プログラムと同じ値を計算します。
+예를들어 아래의 코드는 
+System V 의 sub 프로그램처럼 값을 계산합니다.
 
     $checksum = do {
 	local $/;  # slurp!
@@ -14598,8 +14597,7 @@ The following efficiently counts the number of set bits in a bit vector:
 
 =end original
 
-以下は、効率的にビットベクターの設定されているビットを
-数えるものです。
+아래는 효율적으로 비트 벡터가 설정된 비트를 세는 것입니다.
 
     $setbits = unpack("%32b*", $selectmask);
 
@@ -14612,10 +14610,10 @@ not known to be valid is likely to have disastrous consequences.
 
 =end original
 
-C<p> と C<P> は注意深く使うべきです。
-Perl は C<unpack()> に渡された値が有効なメモリ位置を指しているかどうかを
-確認する方法がないので、有効かどうかわからないポインタ値を渡すと
-悲惨な結果を引き起こすかもしれません。
+C<p> 과 C<P> 는 주의 깊게 사용해야 됩니다.
+Perl 은 C<unpack()> 에 넘겨진 값이 유효한 메모리 위치를 지정했는 지,
+확인하는 방법이 없기 때문에, 유효현지 어떤지 모르는 포인터 값을 넘기면 
+비참한 결과를 발생시킬지도 모릅니다.
 
 =begin original
 
