--- a/trunk/perldoc/ko/perl/5.10/perlfunc.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlfunc.pod
@@ -14626,12 +14626,12 @@ the rest is ignored.
 
 =end original
 
-多くの pack コードがある場合や、フィールドやグループの繰り返し回数が
-入力文字列の残りより大きい場合、結果は未定義です:
-繰り返し回数が減らされる場合もありますし、C<unpack()> が空文字列や 0 を
-返すこともありますし、エラーで終了することもあります。
-もし入力文字列が TEMPLATE で表現されているものより大きい場合、残りは
-無視されます。
+많은 pack 코드가 있는 경우나, 필드나 그룹의 반복횟수가 입력문자열의 
+남은 것보다 더 큰 경우, 결과ㄴ 미정의입니다.
+반복횟수가 줄어드는 경우도 있고, C<unpack()> 이 빈문자열이나 0 을 
+반환하는 것도 있고, 에러로 종료하는 경우도 있습니다.
+만약 입력문자열이 TEMPLATE 로 표현된 것보다 큰 경우, 남은 것은 
+무시됩니다.
 
 =begin original
 
@@ -14639,7 +14639,7 @@ See L</pack> for more examples and notes.
 
 =end original
 
-さらなる例と注意に関しては L</pack> を参照してください。
+더 자세한 예제와 주의에 대해서는 L</pack> 을 참조해주세요.
 
 =item untie VARIABLE
 X<untie>
@@ -14651,9 +14651,9 @@ Has no effect if the variable is not tied.
 
 =end original
 
-変数とパッケージの間の結合を解きます。
-(L<tie> を参照してください。)
-結合されていない場合は何も起きません。
+변수와 패키지의 사이의 결합을 해방합ㄴ디ㅏ.
+(L<tie> 를 참조해주세요)
+결합되지 않은 경우는 아무것도 발생하지 않습니다.
 
 =item unshift ARRAY,LIST
 X<unshift>
@@ -14666,9 +14666,10 @@ array, and returns the new number of elements in the array.
 
 =end original
 
-C<shift> の逆操作を行ないます。
-見方を変えれば、C<push>の逆操作とも考えられます。
-LIST を ARRAY の先頭に入れて、新しくできた配列の要素の数を返します。
+C<shift> 의 역조작을 수행합니다.
+관점을 바꾸면, C<push> 의 역조작도 생각할 수 있습니다.
+LIST 를 ARRAY 의 맨 앞에 넣고, 새롭게 생긴 배열의 요소의 수를 
+반환합니다.
 
     unshift(@ARGV, '-e') unless $ARGV[0] =~ /^-/;
 
@@ -14680,8 +14681,8 @@ reverse.
 
 =end original
 
-LIST は、はらばらにではなく、一度に登録されるので、順番はそのままです。
-逆順に登録するには、C<reverse> を使ってください。
+LIST 는 한번에 등록되기에 순서는 그대로입니다.
+역순으로 등록하기에는 C<reverse> 를 사용해주세요.
 
 =item use Module VERSION LIST
 X<use> X<module> X<import>
@@ -14702,11 +14703,9 @@ package.  It is exactly equivalent to
 
 =end original
 
-指定したモジュールから、現在のパッケージにさまざまな内容を
-インポートします。
-多くは、パッケージのサブルーチン名や、変数名に別名を付けることで、
-実現されています。これは、
-以下は等価ですが:
+지정한 모듈에서 현재에서 현재의 패키지로 여러 내용을 임포트합니다.
+많은 패키지의 서브루틴 이름이나 변수이름에 별명을 붙이는 것으로
+표현될 수 있습니다. 이것은:
 
     BEGIN { require Module; Module->import( LIST ); }
 
@@ -14716,7 +14715,7 @@ except that Module I<must> be a bareword.
 
 =end original
 
-Module が I<単なる単語でなければならない> ことを除けば、です。
+Module 이 I<단순히 단어가 아니면 안되는> 것을 빼면 같습니다.
 
 =begin original
 
