--- a/trunk/perldoc/ko/perl/5.10/perlfunc.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlfunc.pod
@@ -14730,14 +14730,14 @@ of perl older than the specified one.
 
 =end original
 
-特に C<use VERSION> の形式では、
-VERSION は 5.006 のような数値(C<$]> と比較されます)か、v5.6.1 の形
-(C<$^V> (またの名を $PERL_VERSION) と比較されます)で指定します。
-VERSION が Perl の現在のバージョンより大きいと、致命的エラーが
-発生します; Perl はファイルの残りを読み込みません。
-L</require> と似ていますが、これは実行時にチェックされます。
-対称的に、C<no VERSION> は指定されたバージョンより古いバージョンの perl で
-動作させたいことを意味します。
+특히 C<use VERSION> 의 형식에서는 VERSION 은 5.006 처럼 
+수치(C<$[> 와 비교됩니다)나 v.5.6.1 의 형식(C<$^V> (또는 이름을 
+$PERL_VERSION) 과 비교됩니다)으로 지정합니다.
+VERSION 이 Perl 의 표현의 버젼보다 크면 치명적 에러가 발생합니다;
+Perl dㅡㄴ 파일의 남은 부분을 읽지 않습니다.
+L</require> 와 비슷하지만, 이것은 실행시에 체크됩니다.
+대칭적으로 C<no VERSION> 은 지정된 버젼보다 낡은 버젼의 Perl 로 
+동작시키고 싶다는 것을 의미합니다.
 
 =begin original
 
@@ -14748,10 +14748,10 @@ version should be used instead.
 
 =end original
 
-VERSION に v5.6.1 の形のリテラルを指定することは一般的には避けるべきです;
-なぜなら、この文法に対応していない Perl の初期のバージョンでは
-誤解させるようなエラーメッセージが出るからです。
-代わりに等価な数値表現を使うべきです。
+VERSION 에 v5.6.1 형식의 리터럴을 지정하는 것은 일반적으로는 피해야 합니다;
+왜냐면 이 문법을 지원하지 않는 Perl 의 초기 버젼에서는 오해할 수 있는 
+에러메시지가 나오기 때문입니다.
+대신에 같은 행동을 하는 수치표현을 사용해야 합니다.
 
 =begin original
 
@@ -14762,11 +14762,11 @@ later perl versions understand the v-string syntax in the second).
 
 =end original
 
-あるいは、直感的ではない C<use 5.010_001> を避けるために、数値のバージョン
-C<use 5.006> を書いてから v 文字バージョン C<use v5.10.1> を書くという
-方法もあります。
-(古いバージョンの perl では最初の C<use> で安全に失敗し、より新しい
-バージョンの perl は 2 番目の v 文字の文法を理解します)。
+혹은 직감적이지 않은 C<use 5.010_001> 을 피하기 위해 수치의 버젼
+C<use 5.006> 을 쓰고나서 v 문자버젼 C<use v.5.10.1> 을 쓰는 방법도 
+있습니다.
+(낡은 버젼의 Perl 에서는 최초의 C<use> 에서 안전하게 실패하고, 
+보다 새로운 버젼의 Perl 에서는 2번째의 v 문자의 문법을 이해합니다).
 
     use v5.6.1;		# compile time version check
     use 5.6.1;		# ditto
@@ -14781,10 +14781,9 @@ older versions of Perl.  (We try not to do this more than we have to.)
 
 =end original
 
-これは古いバージョンの Perl から互換性のない形で変更されたライブラリ
-モジュール(我々は必要な場合以外にそのようなことがないように
-努力していますが)を C<use> する前に、現在の Perl のバージョンを
-調べたい場合に有用です。
+이것은 낡은 버젼의 Perl 에서 호환성 없는 형식으로 변경된 라이브리 
+모듈(우리는 필요한 경우 이외에 그런 것이 없도록 노력하고 있습니다만)을 
+C<use> 하기 전에 현재의 Perl 버젼을 조사하고 싶은 경우에 유용합니다.
 
 =begin original
 
